removing bad text

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           Eu sou
           <span
             class="typed"
-            data-typed-items="editor de vídeo, manipulador de vídeo, video editor"
+            data-typed-items="editor de vídeo, video editor"
           ></span>
         </p>
       </div>
